--- a/index.html
+++ b/index.html
@@ -16,15 +16,48 @@
 <body>
 
 	<main class="container">
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<h2 id = "mainHeader">Gravy Train Scheduler</h2>
-			</div>
+		<div id = "mainHeader" class="jumbotron">
+			<h2 class= "page-header text-center">Gravy Train Scheduler</h2>
 		</div>
 		<section class="row">
 			<div class = "col-md-12">
-				<div id= "header" class="text-center" >
-					<h4 class="text-center">Train carousel goes here</h4>
+				<div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#myCarousel" data-slide-to="1"></li>
+						<li data-target="#myCarousel" data-slide-to="2"></li>
+						<li data-target="#myCarousel" data-slide-to="3"></li>
+					</ol>
+
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner" role="listbox">
+						<div class="item active">
+						<img src="assets/images/train-image1.jpg" alt="China Bullet Train">
+					</div>
+
+						<div class="item">
+							<img src="assets/images/train-image2.jpg" alt="Tracks Grey">
+						</div>
+
+						<div class="item">
+							<img src="assets/images/train-image3.jpg" alt="Tracks through meadow">
+						</div>
+
+						<div class="item">
+							<img src="assets/images/train-image4.jpg" alt="Hogwarts">
+						</div>
+					</div>
+
+					<!-- Left and right controls -->
+					<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
 				</div>
 			</div>
 		</section>
@@ -73,8 +106,8 @@
 				<!-- Modal -->
 <!-- 				<div class="modal fade" id="timeModal" role="dialog">
 					<div class="modal-dialog">
- -->
-						<!-- Modal content-->
+					-->
+					<!-- Modal content-->
 <!-- 						<div class="modal-content">
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -90,7 +123,7 @@
 
 					</div>
 				</div>
- -->			</div>
+			-->			</div>
 		</section>
 
 		<div id = "footer" class = "row">
