done except for military time input

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 								<input type="text" id="destination" name="destination" class="dataEntry" >
 							</p>
 							<p>
-								<label for="firstTime">Time (Military time - HH:mm) of first train for the day prior to current time:</label><br>
+								<!-- <label for="firstTime">Time (Military time - HH:mm) of first train for the day:</label><br> -->
+								<label for="firstTime">Time of first train for the day:</label><br>	
+								<!-- <input type="text" pattern="([01]?[0-9]{1}|2[0-3]{1}):[0-5]{1}[0-9]{1}" id="firstTime" name="firstTime" class="dataEntry" > -->
 								<input type="time" id="firstTime" name="firstTime" class="dataEntry" >
 							</p>
 							<p>
